Added new plots

--- a/Notes/TSC1 Notes/main.tex
+++ b/Notes/TSC1 Notes/main.tex
@@ -686,7 +686,15 @@ Consider the sine time series with varying noise levels and histogram bins:
 \caption{Should be $X\rightarrow Y$; i.e.\ positive leaning (positive on colorbar)}
 \end{figure}
 \begin{figure}[!H]
+\includegraphics[scale=0.55]{SineTSxy_3C.eps}
+\caption{Should be $X\rightarrow Y$; i.e.\ positive leaning (positive on colorbar)}
+\end{figure}
+\begin{figure}[!H]
 \includegraphics[scale=0.55]{SineTSdxy.eps}
+\caption{Should be $dX\rightarrow Y$; i.e.\ positive leaning (positive on colorbar)}
+\end{figure}
+\begin{figure}[!H]
+\includegraphics[scale=0.55]{SineTSdxy_3C.eps}
 \caption{Should be $dX\rightarrow Y$; i.e.\ positive leaning (positive on colorbar)}
 \end{figure}
 \begin{figure}[!H]
@@ -694,7 +702,15 @@ Consider the sine time series with varying noise levels and histogram bins:
 \caption{Should be $X\rightarrow dY$; i.e.\ positive leaning (positive on colorbar)}
 \end{figure}
 \begin{figure}[!H]
+\includegraphics[scale=0.55]{SineTSxdy_3C.eps}
+\caption{Should be $X\rightarrow dY$; i.e.\ positive leaning (positive on colorbar)}
+\end{figure}
+\begin{figure}[!H]
 \includegraphics[scale=0.55]{SineTSdxdy.eps}
+\caption{Should be $dX\rightarrow dY$; i.e.\ positive leaning (positive on colorbar)}
+\end{figure}
+\begin{figure}[!H]
+\includegraphics[scale=0.55]{SineTSdxdy_3C.eps}
 \caption{Should be $dX\rightarrow dY$; i.e.\ positive leaning (positive on colorbar)}
 \end{figure}
 \end{document}
