Adding self-penchant plots

--- a/Notes/TSC1 Notes/main.tex
+++ b/Notes/TSC1 Notes/main.tex
@@ -680,6 +680,14 @@ Consider the notional time series $(\mathbf{x},\mathbf{y})$ extended to a librar
 \includegraphics[scale=0.55]{notionalTS.eps}
 \end{figure}
 
+This figure implies
+$$
+\begin{array}{ccc}
+x & & y\\
+\uparrow &\mathrel{\ooalign{\hss$\nearrow$\hss\cr$\nwarrow$}} & \uparrow\\
+dx &\rightarrow & dy
+\end{array}
+$$
 Consider the sine time series with varying noise levels and histogram bins:
 \begin{figure}[!H]
 \includegraphics[scale=0.55]{SineTSxy.eps}
