--- a/Notes/TSC1 Notes/main.tex
+++ b/Notes/TSC1 Notes/main.tex
@@ -3,6 +3,7 @@
 \usepackage[english]{babel}
 \usepackage[utf8x]{inputenc}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage[margin=0.5in]{geometry}
 \usepackage{caption}
@@ -85,37 +86,6 @@ and the local change in the response values are
 $$
 \delta y_{n\frac{\pi}{2}} = k_1\sin\left(n\frac{\pi}{2}\right)+k_2\cos\left(n\frac{\pi}{2}\right)+\eta^\prime_{n\frac{\pi}{2}} = \eta^\prime_{n\frac{\pi}{2}} + \left(-1\right)^n k_1\;\;.
 $$
-
-\section{Subsetting for LIR variance}
-Consider $\mathbf{X}=\{x_t\}$ and $\mathbf{Y}=\{y_t\}$ given $t\in[0,4\pi]$.  Let $L$ be the library length of $\mathbf{X}$ and $\mathbf{Y}$.  These systems have five points where $t=n\pi$ for $n=0,1,2,3$ and $4$. Thus, an $m$-binned histogram of $\mathbf{X}$, where $m\ge L$, would have a bin, $b_0$, centered at $x_t=0$ that contains the five points $\mathbf{X}_{0} = \{x_{n\pi}\}$.  (If $m<L$, then $\mathbf{b}_0$ would contain at least five points but the total number of points in $\mathbf{b}_0$ would be a function of the total number of bins, assuming bins of equal sizes.)  
-
-Consider the set of time steps $\mathbf{T}=\{t=n\pi\}\;\forall n=0,1,2,3,4$ for which the values in $\mathbf{X_0}$ are achieved.  The local impulses immediately preceding $\mathbf{b}_0$ are $\mathbf{\delta X}_\mathbf{T}=\{\delta x_{n\pi}\}$, which also contains five points.  However, those five points would not appear in a single bin of an m-binned histogram of $\{\delta x_t\}$ (given $m\ge L$).  The set $\mathbf{\delta X}_\mathbf{T}$ would actually be split into two separate bins in such a histogram, one for the three points equal to $\kappa_2$ and one for the two points equal to $-\kappa_2$.  Thus, the time steps associated all of the points in a given histogram bin of a given time series, e.g.\ $\mathbf{b}_0$, do not necessarily correspond to points in a single histogram bin of different (though related) times series, e.g.\ $\mathbf{\delta X}_\mathbf{T}$.  This idea is straightforward but it is the basic idea underlying the subsetting method for calculating the LIR variance.
-
-The subsetting is premised on the following:
-\begin{itemize}
-\item The local temporal response causally depends on the local temporal change in the driver; e.g.\ $y_{t}$ causally depends on $\delta x_{t}$
-\item The local temporal response causally depends on the immediately preceding response; e.g.\ $y_{t}$ causally depends on $y_{t-1}$
-\item The local temporal response does not causally depend on the immediately preceding driver except through the local temporal change in the driver; e.g.\ $y_{t}$ does not causally depend on $x_{t-1}$ except through $\delta x_t$
-\end{itemize}
-Thus, the subsetting procedure is as follows:
-\begin{enumerate}
-\item Create an $m$-binned histogram of the response signal $\mathbf{R} = \{r_t\}$.
-\item Given $m$ bins $\mathbf{b}_i$ where $i$ denotes the center of the $m$th bin, create an $m^\prime$-binned histogram of the change in the driver signal $\mathbf{\delta D} = =\{\delta d_t\} = \{d_t-d_{t-1}\}$ at the time steps $\mathbf{\tau} = \{t\;|\;r_t\in \mathbf{b}_i\}$.
-\item Given $m^\prime$ bins $\mathbf{b^\prime}_j$ where $j$ denotes the center of the $m^\prime$th bin, find the variance of the response at the time steps immediately following (i.e.\ $t+1$) the time steps $\mathbf{\tau^\prime} = \{t\;|\;\delta d_t\in \mathbf{b}_j\}$.
-\end{enumerate}
-As an example, consider $\mathbf{R} = \mathbf{X}$ and $\mathbf{D} = \mathbf{Y}$.  An $m$-binned histogram of $\mathbf{X}$ would lead to a bin centered at zero, $b_0$, that contains at least five points evaluated at $t=n\pi\;\forall n=0,1,2,3,4$.  Thus, the change in the driver signal, i.e.\ $\{\delta y_t\}$, evaluated at $\mathbf{\tau}$ contains at least the five points $\eta^\prime_{n\pi} + \left(-1\right)^n k_2$.  The $m^\prime$-binned histogram of step 2 would split these five points among different bins (depending on both the sign of $k_2$ and the value of $\eta^\prime_{n\pi}$ for a given $n$).  If each of the points is placed into a bin alone, then the variance calculations of step 3 become $\mathop{var}\left(\sin(n\pi+1)\right)\;\forall n=0,1,2,3,4$, which is five zeros because the variance of a single point is zero.  Suppose all five points are placed into a single bin.  The variance calculation of step 3 then becomes 
-\begin{eqnarray}
-\mathop{var}\left(\{\sin(n\pi+1)\; | n=0,1,2,3,4\}\right) &=& \mathop{var}\left(\{\sin(n\pi)\cos(1)+\cos(n\pi)\sin(1)\; | n=0,1,2,3,4\}\right)\\
-&=& \mathop{var}\left(\{(-1)^n\kappa_2\; | n=0,1,2,3,4\}\right)\\
-&=& \mathop{var}\left(\{\kappa_2,-\kappa_2,\kappa_2,-\kappa_2,\kappa_2\}\right)\\
-&=& \frac{1}{5}\left((\kappa_2-\mu)^2+(-\kappa_2-\mu)^2+(\kappa_2-\mu)^2+(-\kappa_2-\mu)^2+(\kappa_2-\mu)^2\right)\\
-&=& \frac{1}{5}\left(\frac{16}{25}\kappa_2^2+\frac{36}{25}\kappa_2^2+\frac{16}{25}\kappa_2^2+\frac{36}{25}\kappa_2^2+\frac{16}{25}\kappa_2^2\right)\\
-&=& \frac{1}{5}\frac{120}{25}\kappa_2^2\\
-&=& \frac{24}{25}\kappa_2^2\
-\end{eqnarray}
-where $\mu=\kappa_2/5$.  Thus, the LIR variance depends strongly on the number of bins used to contruct the histograms in steps 1 and 2.  
-
-In this particular example, $\mathbf{Y}$ is known to be the response and $\mathbf{X}$ is known to be the driver.  It may be assumed that our assignment of $\mathbf{R} = \mathbf{X}$ and $\mathbf{D} = \mathbf{Y}$ may proven ``false'' by comparing the variances given this assignment and it's complement, i.e.\ $\mathop{LIRvar}|\mathbf{R} = \mathbf{X},\mathbf{D} = \mathbf{Y}$ and $\mathop{LIRvar}|\mathbf{R} = \mathbf{Y},\mathbf{D} = \mathbf{X}$.  It may be assumed that the lower LIR variance is indicative of a stronger causal inference, i.e.\ if $\mathop{LIRvar}|\mathbf{R} = \mathbf{X},\mathbf{D} = \mathbf{Y}$ is greater than $\mathop{LIRvar}|\mathbf{R} = \mathbf{Y},\mathbf{D} = \mathbf{X}$, then it may be assumed $\mathbf{R} = \mathbf{Y},\mathbf{D} = \mathbf{X}$ is the more ``correct'' assignment.  Notice, however, that we have already shown that the incorrect assignment of $\mathbf{R} = \mathbf{X}$ and $\mathbf{D} = \mathbf{Y}$ can lead to an LIR variance of variance.  The correct assignment of $\mathbf{R} = \mathbf{Y}$ and $\mathbf{D} = \mathbf{X}$ cannot lead to an LIR variance less than zero (variances are nonnegative).  Thus, it seems that comparing LIR variances is not a robust method for causal inference.  
 
 \section{LIR Approach to Probabilistic Causality}
 Probabilistic causality is centered on the definition that a cause $C$ is said to {\em cause} (or {\em drive}) an effect $E$ if
@@ -721,6 +691,110 @@ Consider the sine time series with varying noise levels and histogram bins:
 \includegraphics[scale=0.55]{SineTSdxdy_3C.eps}
 \caption{Should be $dX\rightarrow dY$; i.e.\ positive leaning (positive on colorbar)}
 \end{figure}
+
+\newpage
+\section{Example Time Series 1: Clean Impulse w/ Noisy Response}
+Consider the time series $X\equiv\{x_t\}$ and $Y\equiv\{y_t=x_{t-1}+B\eta_t\}$ with $\eta_t\sim \mathcal{N}(0,1)$, $B\in[0,1]$, and $x_t = \kappa\;\forall t\in\mathbb{T}$ and $x_t = 0\;\forall t\notin\mathbb{T}$.  The $X$ peak value $\kappa$ and the set of times at which the peak values occur, $\mathbb{T}$, are assumed to not affect the causal inference between $X$ and $Y$ (assuming reasonable $\mathbb{T}$, e.g., assuming $\exists\;t\notin\mathbb{T}$).  The truth for this example time series is $X\rightarrow Y$.
+
+The following set of ``leaning reports'' were generated a library length $L=20$, $B=0.3$, $\mathbb{T} = \{1,5,15\}$, and $\kappa = 2$; the full command was 
+\begin{verbatim}
+[x,y] = wTS(20,0.3,[1 5 15],[2 2 2]);
+\end{verbatim}
+The leaning reports differ only in the number of bins used in the leaning calculations.  The report commands are shown for clarity.
+
+\begin{verbatim}
+>> leaning_report(x,y,3,1e-6,[-2,-1,0,1,2])
+-------------------------
+Lagged Leanings:
+  [lag,leaning] :: guess
+  -2,0.2150162 :: x_{t+-2}->y
+  -1,0.2649977 :: x_{t+-1}->y
+  0,0.3138691 :: x_{t+0}->y
+  1,0.1623932 :: x_{t+1}->y
+  2,0.1846154 :: x_{t+2}->y
+-------------------------
+LIR Leanings:
+  [ID,leaning] :: guess
+  (x,y),0.3138691 :: x->y
+  (dx,y),-0.2027365 :: y->dx
+  (dx,dy),0.0150518 :: dx->dy
+  (x,dy),0.4682899 :: x->dy
+  (dx,x),-0.6050109 :: x->dx
+  (dy,y),-0.1274689 :: y->dy
+  (x&dx,y),-0.0168633 :: y->x&dx
+  (y&dy,x),-0.2476780 :: x->y&dy
+  (x&dx,y&dy),0.0034400 :: x&dx->y&dy
+\end{verbatim} 
+\begin{verbatim}
+>> leaning_report(x,y,5,1e-6,[-2,-1,0,1,2])
+-------------------------
+Lagged Leanings:
+  [lag,leaning] :: guess
+  -2,0.6428571 :: x_{t+-2}->y
+  -1,0.6269024 :: x_{t+-1}->y
+  0,0.6431373 :: x_{t+0}->y
+  1,0.5428571 :: x_{t+1}->y
+  2,0.5743590 :: x_{t+2}->y
+-------------------------
+LIR Leanings:
+  [ID,leaning] :: guess
+  (x,y),0.6431373 :: x->y
+  (dx,y),0.0603486 :: dx->y
+  (dx,dy),-0.0329019 :: dy->dx
+  (x,dy),0.2580981 :: x->dy
+  (dx,x),-0.6050109 :: x->dx
+  (dy,y),-0.0016151 :: y->dy
+  (x&dx,y),-0.1065015 :: y->x&dx
+  (y&dy,x),-0.1981424 :: x->y&dy
+  (x&dx,y&dy),0.0995528 :: x&dx->y&dy
+\end{verbatim} 
+\begin{verbatim}
+>> leaning_report(x,y,10,1e-6,[-2,-1,0,1,2])
+-------------------------
+Lagged Leanings:
+  [lag,leaning] :: guess
+  -2,0.4158482 :: x_{t+-2}->y
+  -1,0.3853554 :: x_{t+-1}->y
+  0,0.3980392 :: x_{t+0}->y
+  1,0.3204365 :: x_{t+1}->y
+  2,0.3225962 :: x_{t+2}->y
+-------------------------
+LIR Leanings:
+  [ID,leaning] :: guess
+  (x,y),0.3980392 :: x->y
+  (dx,y),0.0008913 :: dx->y
+  (dx,dy),-0.0010890 :: dy->dx
+  (x,dy),0.1571900 :: x->dy
+  (dx,x),-0.6050109 :: x->dx
+  (dy,y),-0.0325069 :: y->dy
+  (x&dx,y),-0.0548762 :: y->x&dx
+  (y&dy,x),-0.2935443 :: x->y&dy
+  (x&dx,y&dy),0.0510836 :: x&dx->y&dy
+\end{verbatim} 
+\begin{verbatim}
+>> leaning_report(x,y,15,1e-6,[-2,-1,0,1,2])
+-------------------------
+Lagged Leanings:
+  [lag,leaning] :: guess
+  -2,0.3407955 :: x_{t+-2}->y
+  -1,0.3331653 :: x_{t+-1}->y
+  0,0.3445715 :: x_{t+0}->y
+  1,0.2874359 :: x_{t+1}->y
+  2,0.2793407 :: x_{t+2}->y
+-------------------------
+LIR Leanings:
+  [ID,leaning] :: guess
+  (x,y),0.3445715 :: x->y
+  (dx,y),0.0389137 :: dx->y
+  (dx,dy),0.0063290 :: dx->dy
+  (x,dy),0.1098856 :: x->dy
+  (dx,x),-0.6050109 :: x->dx
+  (dy,y),-0.0129562 :: y->dy
+  (x&dx,y),-0.0652997 :: y->x&dx
+  (y&dy,x),-0.3002158 :: x->y&dy
+  (x&dx,y&dy),0.0510836 :: x&dx->y&dy
+\end{verbatim}
+
 \end{document}
 
 
