Adding LIR simple example

--- a/Notes/TSC1 Notes/main.tex
+++ b/Notes/TSC1 Notes/main.tex
@@ -646,9 +646,9 @@ $\ldots$continued$\ldots$
 as expected from above.  The variable $\Delta_{EC}$ is the mean difference of the available (dependent on the number of bins in the histograms) penchants between two times series (or, in general, any two data sets; the temporal aspect of this causal analysis is only captured in the LIR techinques, i.e.\ in the definitions of $\delta x$ and $\delta y$, and not in the definitions of the penchants).  $\Delta_{EC}$ will become the workhorse of our causal inference and thus, will be called the {\em leaning} of the pair of data sets.  Giving $\Delta_{EC}$ a name is simply to help save time typing in the discussions that follow.
 
 Consider the notional time series $(\mathbf{x},\mathbf{y})$ extended to a library length of $L=25$.  This leads to the following plot:
-\begin{figure}[!H]
-\includegraphics[scale=0.55]{notionalTS.eps}
-\end{figure}
+%\begin{figure}[!H]
+%\includegraphics[scale=0.55]{notionalTS.eps}
+%\end{figure}
 
 This figure implies
 $$
@@ -659,38 +659,38 @@ dx &\rightarrow & dy
 \end{array}
 $$
 Consider the sine time series with varying noise levels and histogram bins:
-\begin{figure}[!H]
-\includegraphics[scale=0.55]{SineTSxy.eps}
-\caption{Should be $X\rightarrow Y$; i.e.\ positive leaning (positive on colorbar)}
-\end{figure}
-\begin{figure}[!H]
-\includegraphics[scale=0.55]{SineTSxy_3C.eps}
-\caption{Should be $X\rightarrow Y$; i.e.\ positive leaning (positive on colorbar)}
-\end{figure}
-\begin{figure}[!H]
-\includegraphics[scale=0.55]{SineTSdxy.eps}
-\caption{Should be $dX\rightarrow Y$; i.e.\ positive leaning (positive on colorbar)}
-\end{figure}
-\begin{figure}[!H]
-\includegraphics[scale=0.55]{SineTSdxy_3C.eps}
-\caption{Should be $dX\rightarrow Y$; i.e.\ positive leaning (positive on colorbar)}
-\end{figure}
-\begin{figure}[!H]
-\includegraphics[scale=0.55]{SineTSxdy.eps}
-\caption{Should be $X\rightarrow dY$; i.e.\ positive leaning (positive on colorbar)}
-\end{figure}
-\begin{figure}[!H]
-\includegraphics[scale=0.55]{SineTSxdy_3C.eps}
-\caption{Should be $X\rightarrow dY$; i.e.\ positive leaning (positive on colorbar)}
-\end{figure}
-\begin{figure}[!H]
-\includegraphics[scale=0.55]{SineTSdxdy.eps}
-\caption{Should be $dX\rightarrow dY$; i.e.\ positive leaning (positive on colorbar)}
-\end{figure}
-\begin{figure}[!H]
-\includegraphics[scale=0.55]{SineTSdxdy_3C.eps}
-\caption{Should be $dX\rightarrow dY$; i.e.\ positive leaning (positive on colorbar)}
-\end{figure}
+%\begin{figure}[!H]
+%\includegraphics[scale=0.55]{SineTSxy.eps}
+%\caption{Should be $X\rightarrow Y$; i.e.\ positive leaning (positive on colorbar)}
+%\end{figure}
+%\begin{figure}[!H]
+%\includegraphics[scale=0.55]{SineTSxy_3C.eps}
+%\caption{Should be $X\rightarrow Y$; i.e.\ positive leaning (positive on colorbar)}
+%\end{figure}
+%\begin{figure}[!H]
+%\includegraphics[scale=0.55]{SineTSdxy.eps}
+%\caption{Should be $dX\rightarrow Y$; i.e.\ positive leaning (positive on colorbar)}
+%\end{figure}
+%\begin{figure}[!H]
+%\includegraphics[scale=0.55]{SineTSdxy_3C.eps}
+%\caption{Should be $dX\rightarrow Y$; i.e.\ positive leaning (positive on colorbar)}
+%\end{figure}
+%\begin{figure}[!H]
+%\includegraphics[scale=0.55]{SineTSxdy.eps}
+%\caption{Should be $X\rightarrow dY$; i.e.\ positive leaning (positive on colorbar)}
+%\end{figure}
+%\begin{figure}[!H]
+%\includegraphics[scale=0.55]{SineTSxdy_3C.eps}
+%\caption{Should be $X\rightarrow dY$; i.e.\ positive leaning (positive on colorbar)}
+%\end{figure}
+%\begin{figure}[!H]
+%\includegraphics[scale=0.55]{SineTSdxdy.eps}
+%\caption{Should be $dX\rightarrow dY$; i.e.\ positive leaning (positive on colorbar)}
+%\end{figure}
+%\begin{figure}[!H]
+%\includegraphics[scale=0.55]{SineTSdxdy_3C.eps}
+%\caption{Should be $dX\rightarrow dY$; i.e.\ positive leaning (positive on colorbar)}
+%\end{figure}
 
 \newpage
 \section{Example Time Series 1: Clean Impulse w/ Noisy Response}
@@ -803,12 +803,41 @@ which is
 \Delta_{y_t x_{t-1}} &=& \langle \rho_{y_t x_{t-1}}\rangle - \langle \rho_{x_{t-1} y_t}\rangle\\
 &=& \langle P(y_t| x_{t-1}) - P(y_t| x_{t^\prime\neq t-1})\rangle - \langle P(x_{t-1} |y_t)-P(x_{t-1} |y_{t^\prime\neq t})\rangle
 \end{eqnarray}
+%\begin{figure}[!H]
+%\includegraphics[scale=0.55]{laggedleans_wTS.eps}
+%\caption{Should be $x\rightarrow y$; i.e.\ positive leaning}
+%\end{figure}
+
+\newpage
+Consider 
+\begin{verbatim}
+[x,y] = wTS(20,0,[1 5 15],[2 2 2]);
+\end{verbatim}
+which is the clean impulse time series from above with no noise in the response, i.e.\ $B=0$.  The penchants $\rho_{yx}$, $\rho_{xy}$ and the leaning $\Delta_{yx}$ are all shown below.
 \begin{figure}[!H]
-\includegraphics[scale=0.55]{laggedleans_wTS.eps}
-\caption{Should be $x\rightarrow y$; i.e.\ positive leaning}
+\includegraphics[scale=0.55]{sTWpenIMG.eps}
 \end{figure}
-
-
+$$
+\rho_{yx} = \begin{array}{ccc}
+   -0.1765    &     0  & -0.6078\\
+         0    &     0  &      0\\
+    0.1765    &     0  & -0.1765
+\end{array}
+$$
+$$
+\rho_{xy} = \begin{array}{ccc}
+   -0.1765   &      0 &  -0.6078\\
+         0   &      0 &        0\\
+    0.1765   &      0 &  -0.1765
+\end{array}
+$$
+$$
+\Delta_{yx} = \begin{array}{ccc}
+         0    &     0  & -0.7843\\
+         0    &     0  &       0\\
+    0.7843    &     0  &       0
+\end{array}
+$$
 
 \end{document}
 
