Adding new leaning plots

--- a/Notes/TSC1 Notes/main.tex
+++ b/Notes/TSC1 Notes/main.tex
@@ -839,6 +839,19 @@ $$
 \end{array}
 $$
 
+\begin{verbatim}
+[x,y] = wTS(20,0,[1 5 15],[2 2 2]);
+\end{verbatim}
+\begin{figure}[!H]
+\includegraphics[scale=0.55]{LIRimgwTS000.eps}
+\end{figure}
+\begin{verbatim}
+[x,y] = wTS(20,0.5,[1 5 15],[2 2 2]);
+\end{verbatim}
+\begin{figure}[!H]
+\includegraphics[scale=0.55]{LIRimgwTS050.eps}
+\end{figure}
+
 \end{document}
 
 
