--- a/Notes/TSC1 Notes/main.tex
+++ b/Notes/TSC1 Notes/main.tex
@@ -809,50 +809,113 @@ which is
 %\end{figure}
 
 \newpage
-Consider 
-\begin{verbatim}
-[x,y] = wTS(20,0,[1 5 15],[2 2 2]);
-\end{verbatim}
-which is the clean impulse time series from above with no noise in the response, i.e.\ $B=0$.  The penchants $\rho_{yx}$, $\rho_{xy}$ and the leaning $\Delta_{yx}$ are all shown below.
-\begin{figure}[!H]
-\includegraphics[scale=0.55]{sTWpenIMG.eps}
-\end{figure}
-$$
-\rho_{yx} = \begin{array}{ccc}
-   -0.1765    &     0  & -0.6078\\
-         0    &     0  &      0\\
-    0.1765    &     0  & -0.1765
-\end{array}
-$$
-$$
-\rho_{xy} = \begin{array}{ccc}
-   -0.1765   &      0 &  -0.6078\\
-         0   &      0 &        0\\
-    0.1765   &      0 &  -0.1765
-\end{array}
+%Consider 
+%\begin{verbatim}
+%[x,y] = wTS(20,0,[1 5 15],[2 2 2]);
+%\end{verbatim}
+%which is the clean impulse time series from above with no noise in the response, %i.e.\ $B=0$.  The penchants $\rho_{yx}$, $\rho_{xy}$ and the leaning $\Delta_{yx}$ %are all shown below.
+%\begin{figure}[!H]
+%\includegraphics[scale=0.55]{sTWpenIMG.eps}
+%\end{figure}
+%$$
+%\rho_{yx} = \begin{array}{ccc}
+%   -0.1765    &     0  & -0.6078\\
+%         0    &     0  &      0\\
+%    0.1765    &     0  & -0.1765
+%\end{array}
 $$
 $$
-\Delta_{yx} = \begin{array}{ccc}
-         0    &     0  & -0.7843\\
-         0    &     0  &       0\\
-    0.7843    &     0  &       0
-\end{array}
-$$
+%\rho_{xy} = \begin{array}{ccc}
+%   -0.1765   &      0 &  -0.6078\\
+%         0   &      0 &        0\\
+%    0.1765   &      0 &  -0.1765
+%\end{array}
+%$$
+%$$
+%\Delta_{yx} = \begin{array}{ccc}
+%         0    &     0  & -0.7843\\
+%         0    &     0  &       0\\
+%    0.7843    &     0  &       0
+%\end{array}
+%$$
 
-\begin{verbatim}
-[x,y] = wTS(20,0,[1 5 15],[2 2 2]);
-\end{verbatim}
-\begin{figure}[!H]
-\includegraphics[scale=0.55]{LIRimgwTS000.eps}
-\end{figure}
-\begin{verbatim}
-[x,y] = wTS(20,0.5,[1 5 15],[2 2 2]);
-\end{verbatim}
-\begin{figure}[!H]
-\includegraphics[scale=0.55]{LIRimgwTS050.eps}
-\end{figure}
+%\begin{verbatim}
+%[x,y] = wTS(20,0,[1 5 15],[2 2 2]);
+%\end{verbatim}
+%\begin{figure}[!H]
+%\includegraphics[scale=0.55]{LIRimgwTS000.eps}
+%\end{figure}
+%\begin{verbatim}
+%[x,y] = wTS(20,0.5,[1 5 15],[2 2 2]);
+%\end{verbatim}
+%\begin{figure}[!H]
+%includegraphics[scale=0.55]{LIRimgwTS050.eps}
+%\end{figure}
+
+Consider
+\begin{eqnarray*}
+x &=& \left\{0,0,2,0,0,2,0,0,2,0\right\}\\
+y &=& \left\{0,0,0,2,0,0,2,0,0,2\right\}
+\end{eqnarray*}
+and a penchant defined as
+$$
+\rho_{y_{t}x_{t-1}} = P\left( y_t = 2 | x_{t-1} = 2\right) - P\left( y_t = 2 | x_{t-1} \neq 2\right)
+$$
+Estimating the probabilities with frequency counts is straightforward for the first term, i.e.\
+$$
+P\left( y_t = 2 | x_{t-1} = 2\right) = \frac{n_{EC}}{n_C} = \frac{3}{3} = 1\;\;,
+$$
+where $n_{EC}$ is the number of times $y_t=2$ and $x_{t-1}=2$ appears in the pair of time series (where, in this case, $y_t$ is assumed to be the effect $E$ caused by the cause $C$, $x_{t-1}=2$) and $n_{C}$ is the number of times the assumed cause, $x_{t-1}=2$, has appeared.  The conditional probability $P(A|B)$ is not defined if $P(B) = 0$, thus $n_C >0$ by definition, and $n_{EC}<=n_C$ because even though the assumed effect, $y_t=2$, might occur without the assumed cause, $x_{t-1}=2$ in the data, the count $n_{EC}$ is defined to be when they occur together.  It follows that this definition of $P\left( y_t = 2 | x_{t-1} = 2\right)$ can be interpreted as a probability.  
+
+The second term in the penchant is trickier.  Consider the following frequency count,
+$$
+P\left( y_t = 2 | x_{t-1} \neq 2\right) = \frac{n_{EnC}}{n_{nC}} = \frac{0}{6} = 0\;\;,
+$$
+where $n_{EnC}$ is the number of times the assumed effect, $y_t=2$ appears given that the assumed cause $x_{t-1}=2$ has {\em not} occurred, i.e.\ $x_{t-1}\neq 2$, and $n_{nC}$ is the number of times the assumed cause $x_{t-1}=2$ has {\em not} occurred, i.e.\ the number of times $x_{t-1}\neq 2$.  There are seven zeros in $\{x_t$\}, so it may be assumed that $n_{nC}=7$ rather than $n_{nC}=6$ as used above.  But, the condition is on $x_{t-1}$, not $x_t$.  Thus, the time series actually being compared are
+\begin{eqnarray*}
+\tilde{x} &=& \left\{0,0,2,0,0,2,0,0,2\right\}\\
+\tilde{y} &=& \left\{0,0,2,0,0,2,0,0,2\right\}
+\end{eqnarray*}
+which are both shorter than there counterparts above by a single value.  It follows that $\tilde{x}_t = x_{t-1}$ and $\tilde{y}_t=y_t$.  This subsetting of the time series will be discussed again later.
+
+Again, this definition can be interpreted as a probability (for very similar reason to those mentioned above).  However, this term can be rewritten using Bayes' theorem or the law of total probability as
+$$
+P\left( y_t = 2 | x_{t-1} \neq 2\right) = \frac{P\left( y_t = 2 \right)}{P\left( x_{t-1} \neq 2 \right)} - P\left( y_t = 2 | x_{t-1} = 2\right)\frac{P\left( x_{t-1} = 2 \right)}{P\left( x_{t-1} \neq 2 \right)}\;\;.
+$$
+Substituting the frequency counts leads to
+$$
+P\left( y_t = 2 | x_{t-1} \neq 2\right) = \frac{n_E}{n_{nC}} - \frac{n_{EC}}{n_C}\frac{n_C}{n_{nC}} = \frac{3}{6} - \frac{3}{3}\frac{3}{6} = 0\;\;,
+$$
+where the only frequency seen here but not used above is $n_E$ the number of times the assumed effect $y_t=2$ has appeared.  Also consider the completeness relation $P\left( x_{t-1} \neq 2 \right) = 1 - P\left( x_{t-1} = 2 \right)$.  This substitution leads to
+$$
+P\left( y_t = 2 | x_{t-1} \neq 2\right) = \frac{P\left( y_t = 2 \right)}{1-P\left( x_{t-1} = 2 \right)} - P\left( y_t = 2 | x_{t-1} = 2\right)\frac{P\left( x_{t-1} = 2 \right)}{1-P\left( x_{t-1} = 2 \right)}
+$$
+and
+$$
+P\left( y_t = 2 | x_{t-1} \neq 2\right) = \frac{n_E}{1-n_{C}} - \frac{n_{EC}}{n_C}\frac{n_C}{1-n_{C}} = \frac{3}{3} - \frac{3}{3}\frac{3}{3} = 0\;\;.
+$$
+The last expression has removed any reference to $P\left( x_{t-1} \neq 2 \right)$ and $n_{nC}$, which might be considered unobservable.  This particular penchant is the same for both calculation methods.
+
+Consider both these calculation methods for all the possible penchants in this pair of time series, i.e.\
+\begin{center}
+\begin{tabular}{c|c|c|c|c|c}
+$\rho_{y_{t}x_{t-1}}$ & $P(E|C)$ & $P(E|\bar{C})$ method 1 & $P(E|\bar{C})$ method 2 & result 1 & result 2\\
+\hline
+ $y_{t}=2,x_{t-1}=2$& 1 & 0 & 0 & 1 & 1\\
+ $y_{t}=2,x_{t-1}=0$& 0 & 1 & 1 & -1 & -1\\
+ $y_{t}=0,x_{t-1}=2$& 0 & 1 & 1 & -1 & -1\\
+ $y_{t}=0,x_{t-1}=0$& 1 & 0 & 0 & 1 & 1
+\end{tabular}
+\end{center}
+For this example, both methods are equal for all the penchants.  The main concern here is that the second conditional probability term in the definition of the penchant has been replaced with probabilities of the assumed causes and effects.  This substitution addresses the argument that this second conditional probability term is not observable (e.g.\ Pearl's argument that there's no way to know what an effect given ``no cause'' actually is supposed to mean).  However, it introduces concerns about the underlying assumption that the assumed cause must precede the assumed effect.  This concern is partially addressed by subsetting $\{x\}$ and $\{y\}$ into $\{\tilde{x}\}$ and $\{\tilde{y}\}$ because for any given $t$, $\tilde{x}_t$ precedes $\tilde{y}_t$.  But, once is this assumptions still true when frequency counts are used to estimate the necessary probabilities; e.g.\ when $P(x_{t-1}=0)$ and $P(y_t=0)$ are estimated above, is it sufficient to use   
+$$
+P(x_{t-1}=0) = \frac{n_{x0}}{L}
+$$ 
+and 
+$$
+P(y_t=0) = \frac{n_{y0}}{L}\;\;,
+$$
+where $n_{x0}$ is the number of times $\tilde{x}_t = 0$, $n_{y0}$ is the number of times $\tilde{y}_t = 0$, and $L$ is the library length of both $\{\tilde{x}\}$ and $\{\tilde{y}\}$?
 
 \end{document}
-
-
 
