Added data pair testing results

--- a/Notes/TSC1 Notes/main.tex
+++ b/Notes/TSC1 Notes/main.tex
@@ -940,7 +940,17 @@ Test 9: 31/88 (0.3523) correct [total]; 9/22 (0.4091) correct [TS];
 Test 10: 31/88 (0.3523) correct [total]; 9/22 (0.4091) correct [TS];
 \end{verbatim}
 
-
+\begin{figure}
+\begin{tabular}{cc}
+\includegraphics[scale=0.55]{tempTestingLeanPairs_tol01.eps}
+ &
+\includegraphics[scale=0.55]{tempTestingLeanPairs_tol001.eps}
+ \\
+\includegraphics[scale=0.55]{tempTestingLeanPairs_tol0001.eps}
+ &
+\includegraphics[scale=0.55]{tempTestingLeanPairs_tol00001.eps}
+\end{tabular}
+\end{figure}
 
 \end{document}
 
